force-app/main/default/objects/PED_Blacklist_Domini_Email__c/PED_Blacklist_Domini_Email__c.object-meta.xml
<CustomObject>
    <label>Blacklist Domini Email</label>
    <nameField>
        <displayFormat>BLIST-{0000000000}</displayFormat>
        <label>Blacklist Domini Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blacklist Domini Email</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>