force-app/main/default/objects/PED_Blacklist_Domini_Email__c/fields/Attivo__c.field-meta.xml
<CustomField>
    <fullName>Attivo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Attivo</label>
    <type>Checkbox</type>
</CustomField>