force-app/main/default/objects/PED_Blacklist_Domini_Email__c/fields/PED_Blacklist__c.field-meta.xml
<CustomField>
    <fullName>PED_Blacklist__c</fullName>
    <externalId>true</externalId>
    <label>Blacklist</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>