force-app/main/default/objects/PED_Blacklist_Domini_Email__c/fields/PED_Domain__c.field-meta.xml
<CustomField>
    <fullName>PED_Domain__c</fullName>
    <externalId>true</externalId>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>