force-app/main/default/objects/PED_Blacklist_Domini_Email__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manuale</fullName>
                <default>true</default>
                <label>Manuale</label>
            </value>
            <value>
                <fullName>Automatico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>