force-app/main/default/objects/PED_Blacklist_Domini_Email__c/recordTypes/Domini.recordType-meta.xml
<RecordType>
    <fullName>Domini</fullName>
    <active>true</active>
    <label>Domini</label>
</RecordType>