force-app/main/default/objects/PED_Blacklist_Domini_Email__c/recordTypes/Mail.recordType-meta.xml
<RecordType>
    <fullName>Mail</fullName>
    <active>true</active>
    <label>Mail</label>
</RecordType>