force-app/main/default/objects/PED_Blacklist_Domini_Email__c/recordTypes/MailWildCard.recordType-meta.xml
<RecordType>
    <fullName>MailWildCard</fullName>
    <active>true</active>
    <label>MailWildCard</label>
</RecordType>