force-app/main/default/objects/PED_Blacklist_Domini_Email__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attivo__c</columns>
    <columns>PED_Blacklist__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Tipologia__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>